Fix card spacing for desktop & tablet

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -88,12 +88,13 @@ h4 {
   .cards {
     align-items: stretch;
     flex-flow: row wrap;
+    justify-content: center;
   }
   .card {
     flex: 0 1 calc(40% - 1em);
   }
   .sidebar {
-    margin: 2rem 10em;
+    margin: 2rem 12em;
     padding: 0 4em;
   }
 
@@ -104,9 +105,10 @@ h4 {
   .cards {
     flex-flow: row wrap;
     justify-content: space-around;
+    margin-left: 2rem;
   }
   .card {
-    flex: 0 1 calc(25% - 1em);
+    flex: 1 1 calc(25% - 1em);
   }
 
   .main {
@@ -116,7 +118,7 @@ h4 {
     width: 25%;
     height: 25%;
     margin-top: 2em;
-    margin-right: 1.5em;
+    margin-right: 2rem;
   }
   .tags {
     margin: .25rem;
